fix typos, change graduation date, update resume and research statement

--- a/content/publication/texture/cite.bib
+++ b/content/publication/texture/cite.bib
@@ -1,4 +1,4 @@
-@inproceedings{wu2020phrasecut,
+@inproceedings{wu2020dtd2,
   title={Describing Textures using Natural Language},
   author={Wu, Chenyun and Timm, Mikayla and Maji, Subhransu},
   booktitle={Proceedings of the European Conference on Computer Vision (ECCV)},
